--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <version>1.4.1</version>
             <scope>runtime</scope>
         </dependency> -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- Testing-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
