--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
     <modules>
         <module>catalog-service</module>
+        <module>config-service</module>
     </modules>
 
     <dependencyManagement>
