--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <h2Version>2.1.214</h2Version>
         <logbackVersion>1.4.12</logbackVersion>
         <micrometer-tracing.version>1.3.1</micrometer-tracing.version>
+        <testcontainersVersion>1.17.3</testcontainersVersion>
     </properties>
 
     <modules>
@@ -54,6 +55,13 @@
                 <groupId>io.micrometer</groupId>
                 <artifactId>micrometer-tracing-bom</artifactId>
                 <version>${micrometer-tracing.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainersVersion}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -144,6 +152,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
