--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -1,7 +1,10 @@
 name: Commit Stage
 on:
   push:
-
+env:
+ REGISTRY: ghcr.io 
+ IMAGE_NAME: galkzaz/catalog-service 
+ VERSION: latest 
 jobs:
   build:
     name: Build and Test
@@ -56,3 +59,52 @@ jobs:
       # - name: Validate Kubernetes manifests
       #   run: |
       #     kustomize build k8s | kubeconform --strict -
+  package: 
+    name: Package and Publish
+    # This job runs only on the main branch
+    if: ${{ github.ref == 'refs/heads/main' }} 
+    # Runs the job only if the “build” job completes successfully
+    needs: [ build ] 
+    runs-on: ubuntu-22.04 
+    permissions:
+      # Grants the job permissions to read the repository contents and write to the package registry
+      # This is necessary for the job to be able to push the Docker image to the registry
+      contents: read 
+      packages: write 
+      # Grants the job permissions to write security events, such as security vulnerability reports
+      security-events: write 
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3 
+      - name: Set up JDK
+        uses: actions/setup-java@v3 
+        with:
+          distribution: temurin
+          java-version: 17
+          cache: maven
+      - name: Build container image
+        run: |
+          chmod +x mvnw
+          ./mvnw spring-boot:build-image --imageName ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+      # Scans the release candidate image for vulnerabilities using grype
+      - name: OCI image vulnerability scanning
+        uses: anchore/scan-action@v3 
+        id: scan
+        with: 
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+          fail-build: false 
+          severity-cutoff: high 
+      #Scans the release candidate image for vulnerabilities using grype
+      - name: Upload vulnerability report
+        uses: github/codeql-action/upload-sarif@v2 
+        if: success() || failure()
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+      - name: Log into container registry
+        uses: docker/login-action@v2 
+        with:
+          registry: ${{ env.REGISTRY }} 
+          username: ${{ github.actor }} 
+          password: ${{ secrets.GITHUB_TOKEN }} 
+      - name: Publish container image 
+        run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
