--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -104,7 +104,7 @@ jobs:
         uses: docker/login-action@v2 
         with:
           registry: ${{ env.REGISTRY }} 
-          username: ${{ org. name }} 
+          username: ${{ github.repository_owner }} 
           password: ${{ secrets.GITHUB_TOKEN }} 
       - name: Publish container image 
         run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
