--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -3,7 +3,7 @@ on:
   push:
 env:
  REGISTRY: ghcr.io 
- IMAGE_NAME: cloud-native-spring-in-action-polarbookshop/catalog-service 
+ IMAGE_NAME: ${{ github.repository_owner }}/catalog-service 
  VERSION: latest 
 jobs:
   build:
@@ -104,7 +104,7 @@ jobs:
         uses: docker/login-action@v2 
         with:
           registry: ${{ env.REGISTRY }} 
-          username: ${{ github.actor }} 
+          username: ${{ github.repository_owner }} 
           password: ${{ secrets.GITHUB_TOKEN }} 
       - name: Publish container image 
         run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
