--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -12,6 +12,11 @@
 	<version>1.0</version>
 	<name>config-service</name>
 	<description>Provides functionality for centralizing the application configuration.</description>
+
+	<properties>
+		<!-- <imageName>${project.artifactId}:${project.version}</imageName> -->
+		<imageName>${project.artifactId}</imageName>
+	</properties>
 	
 	<dependencies>
 		<dependency>
@@ -26,7 +31,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>${project.artifactId}</name>
+						<name>${imageName}</name>
 						<env>
 							<BP_JVM_VERSION>17</BP_JVM_VERSION>
 						</env>
