--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -17,7 +17,7 @@
 		<!-- <imageName>${project.artifactId}:${project.version}</imageName> -->
 		<imageName>${project.artifactId}</imageName>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -34,6 +34,8 @@
 						<name>${imageName}</name>
 						<env>
 							<BP_JVM_VERSION>17</BP_JVM_VERSION>
+							<BP_LIVE_RELOAD_ENABLED>true</BP_LIVE_RELOAD_ENABLED>
+							<BPL_DEBUG_ENABLED>true</BPL_DEBUG_ENABLED>
 						</env>
 					</image>
 				</configuration>
