--- a/catalog-service/.github/workflows/commit-stage.yml
+++ b/catalog-service/.github/workflows/commit-stage.yml
@@ -49,16 +49,14 @@ jobs:
         with:
           # Fetches the report from the output of the previous step
           sarif_file: ${{ steps.scan.outputs.sarif }}
-      # - name: Setup tools
-      #   uses: alexellis/setup-arkade@v3
-      # - name: Install tools
-      #   uses: alexellis/arkade-get@master
-      #   with:
-      #     kustomize: latest
-      #     kubeconform: latest
-      # - name: Validate Kubernetes manifests
-      #   run: |
-      #     kustomize build k8s | kubeconform --strict -
+      - name: Setup tools
+        uses: alexellis/setup-arkade@v3
+      - name: Install tools
+        uses: alexellis/arkade-get@master
+        with:
+          kubeconform: latest
+      - name: Validate Kubernetes manifests
+        run: |
   package: 
     name: Package and Publish
     # This job runs only on the main branch
