--- a/polar-deployment/docker/docker-compose.yml
+++ b/polar-deployment/docker/docker-compose.yml
@@ -43,4 +43,7 @@ services:
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=polardb_catalog
+      # No value is defined for POSTGRES_DB anymore. as we will use the same server for managing polardb_catalog and polardb_order
+      #- POSTGRES_DB=polardb_catalog
+    volumes: 
+      - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
