add order-service to package pipeline

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -88,6 +88,7 @@ jobs:
         project: [
           catalog-service,
           config-service,
+          order-service
         ]
     env:
       REGISTRY: ghcr.io 
