--- a/dispatcher-service/pom.xml
+++ b/dispatcher-service/pom.xml
@@ -8,53 +8,31 @@
 		<version>1.0</version>
 	</parent>
 	<groupId>com.polarbookshop</groupId>
-	<artifactId>catalog-service</artifactId>
+	<artifactId>dispatcher-service</artifactId>
 	<version>1.0</version>
-	<name>catalog-service</name>
-	<description>Provides functionality for managing the books in the catalog.</description>
-
+	<name>dispatcher-service</name>
+	<description>Provides functionality for dispatching orders</description>
 	<properties>
 		<!-- <imageName>${project.artifactId}:${project.version}</imageName> -->
 		<imageName>${project.artifactId}</imageName>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<!--database migration -->
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-database-postgresql</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
+			<artifactId>spring-cloud-stream-test-binder</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-test</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.retry</groupId>
-			<artifactId>spring-retry</artifactId>
-		</dependency>
-
 	</dependencies>
+
+
 	<build>
 		<plugins>
 			<plugin>
