--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,11 @@
     </properties>
 
     <modules>
-        <module>catalog-service</module>
+        <module>edge-service</module>
         <module>config-service</module>
+        <module>catalog-service</module>
         <module>order-service</module>
+        <module>dispatcher-service</module>
     </modules>
 
     <dependencyManagement>
@@ -70,10 +72,6 @@
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
@@ -141,6 +139,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <!-- for using WebTestClient-->
