--- a/catalog-service/src/main/resources/application.yml
+++ b/catalog-service/src/main/resources/application.yml
@@ -44,9 +44,12 @@ spring:
     timeout-per-shutdown-phase: 15s 
   config:
     # we can use (optional:configserver:http:/ /localhost:8888
-    import: "optional:configserver:"
+    # import: "optional:configserver:"
+    # Disabling Spring Cloud Config in Catalog Service to use Kubernetes ConfigMaps 
+    import: ""
   cloud:
     config:
+      enabled: "false"
       uri: http://localhost:8888
       request-connect-timeout: 5000 # 5s
       request-read-timeout: 5000 # 5s
