--- a/edge-service/src/main/resources/application.yml
+++ b/edge-service/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
     timeout-per-shutdown-phase: 15s 
   config:
     # we can use (optional:configserver:http:/ /localhost:8888
-    import: "optional:configserver:"
+    import: ""
   security:
     oauth2:
       client:
@@ -51,7 +51,8 @@ spring:
     redis:
       namespace: polar:edge
   cloud:
-    config:
+    config: 
+      enabled: "false"
       uri: http://localhost:8888
       request-connect-timeout: 5000 # 5s
       request-read-timeout: 5000 # 5s
