--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     timeout-per-shutdown-phase: 15s 
   config:
     # we can use (optional:configserver:http:/ /localhost:8888
-    import: "optional:configserver:"
+    import: ""
   r2dbc:
     username: user
     password: password
@@ -46,6 +46,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/polardb_order
   cloud:
     config:
+      enabled: "false"
       uri: http://localhost:8888
       request-connect-timeout: 5000 # 5s
       request-read-timeout: 5000 # 5s
