chapter15 add Versioning release candidates

--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -22,7 +22,8 @@ jobs:
     env:
       REGISTRY: ghcr.io 
       IMAGE_NAME: ${{ github.repository_owner }}/${{ matrix.project }} 
-      VERSION: latest 
+      # Publishes a release candidate with a version equal to the Git commit hash
+      VERSION: ${{ github.sha }} 
     steps:
       # Checks out the currentGit repository
       - name: Checkout source code
@@ -97,7 +98,7 @@ jobs:
     env:
       REGISTRY: ghcr.io 
       IMAGE_NAME: ${{ github.repository_owner }}/${{ matrix.project }} 
-      VERSION: latest
+      VERSION: ${{ github.sha }} 
     steps:
       - name: Checkout source code
         uses: actions/checkout@v3 
@@ -132,5 +133,11 @@ jobs:
           registry: ${{ env.REGISTRY }} 
           username: ${{ github.repository_owner }} 
           password: ${{ secrets.GITHUB_TOKEN }} 
-      - name: Publish container image 
+      - name: Publish container image
         run: docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }}
+        # Adds the “latest” tag to the newest release candidate
+      - name: Publish container image (latest)
+        run: |
+          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }} \
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
