--- a/.github/workflows/acceptance-stage.yml
+++ b/.github/workflows/acceptance-stage.yml
@@ -80,6 +80,12 @@ jobs:
           dispatcher-service
         ]
     steps:
+      - name: Log into container registry
+        uses: docker/login-action@v2 
+        with:
+          registry: ${{ env.REGISTRY }} 
+          username: ${{ github.repository_owner }} 
+          password: ${{ secrets.GITHUB_TOKEN }} 
       - name: Deliver application to production
         uses: peter-evans/repository-dispatch@v3
         with:
