--- a/polar-deployment/kubernetes/applications/catalog-service/production/kustomization.yml
+++ b/polar-deployment/kubernetes/applications/catalog-service/production/kustomization.yml
@@ -2,16 +2,18 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  # Uses the manifests in your Catalog Service repo on GitHub as the base for further customizations
+  # The git commit hash (sha) identifying your latest release candidate
   - github.com/spring-framework-books/cloud-native-spring-in-action-PolarBookshop/catalog-service/k8s?ref=main
 
 patchesStrategicMerge:
   - patch-env.yml
+  - patch-resources.yml
+  - patch-volumes.yml
 
 configMapGenerator:
   - behavior: merge
     files:
-      - application-staging.yml
+      - application-prod.yml
     name: catalog-config
 
 images:
@@ -20,5 +22,5 @@ images:
     newTag: latest
 
 replicas:
-  - name: catalog-service
-    count: 2
+  - count: 2
+    name: catalog-service
