--- a/polar-deployment/kubernetes/applications/order-service/production/kustomization.yml
+++ b/polar-deployment/kubernetes/applications/order-service/production/kustomization.yml
@@ -6,11 +6,13 @@ resources:
 
 patchesStrategicMerge:
   - patch-env.yml
+  - patch-resources.yml
+  - patch-volumes.yml
 
 configMapGenerator:
   - behavior: merge
     files:
-      - application-staging.yml
+      - application-prod.yml
     name: order-config
 
 images:
@@ -19,5 +21,5 @@ images:
     newTag: latest
 
 replicas:
-  - name: order-service
-    count: 1
+  - count: 1
+    name: order-service
