--- a/.github/workflows/acceptance-stage.yml
+++ b/.github/workflows/acceptance-stage.yml
@@ -69,6 +69,8 @@ jobs:
     name: Deliver release candidate to production
     needs: [ functional, performance, security ]
     runs-on: ubuntu-22.04
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
@@ -99,7 +101,7 @@ jobs:
         # An action to send an event to another repository and trigger a workflow
         uses: peter-evans/repository-dispatch@v3
         with:
-          token: ${{ secrets.DISPATCH_TOKEN }}
+          #token: ${{ secrets.DISPATCH_TOKEN }}
           repository: ${{ env.DEPLOY_REPO }}
           # A name to identify the event (this is up to you)
           event-type: app_delivery
